compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Membership.Welcome/content/Models/WelcomeMemberModel.cs.pp
namespace $rootnamespace$.Models
{
    public partial class WelcomeMemberModel
    {
        public string Name { get; set; }
        public string Password { get; set; }
        public string Username { get; set; }
        public string LoginUrl { get; set; }
        public string EmailAddress { get; set; }
    }
}